Add authentication by token with email service